@@ -1,3 +1,13 @@
+2001-12-28  Jochen Wiedmann  <joe@ispsoft.de> (2.1008)
+
+	* lib/DBD/mysql.pod: Fixed minor bug in an example.
+
+2001-12-27  Jochen Wiedmann  <joe@ispsoft.de> (2.1007)
+
+	* Bumped version number in Mysql.pm to 1.24, so that
+	  it is always higher than that from the Msql-Mysql-
+	  modules.
+
 2001-12-27  Jochen Wiedmann  <joe@ispsoft.de> (2.1006)
 
 	* Within AutoCommit mode, reconnect is now turned
